# perseus-smarthome

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: auto-merge.yml  ci.yml  claude-code-review.yml  claude.yml  copilot-setup-steps.yml
config/: rpi-io.toml
deploy/systemd/: rpi-io-agent.service  rpi-io-mcp.service
docs/: agent-pr-workflow.md  agent-smoke.md  deployment.md  manual-smoke-tests.md  sdd-workflow.md  zigbee-discovery-notes.md
packaging/: build-deb.sh
packaging/debian/: changelog  conffiles  control  perseus-smarthome.service  postinst  postrm  preinst  prerm
scripts/: deploy_rpi_io_mcp.sh  install.sh  lib.sh  remote-install.sh
specs/: project.spec.md
specs/features/deployment/: design.md  requirements.md  tasks.md
specs/features/llm-agent/: design.md  requirements.md  tasks.md
specs/features/rpi-io-mcp/: design.md  requirements.md  tasks.md
src/perseus_smarthome/: __init__.py  config.py  devices.py  gpio.py  server.py  service.py
src/perseus_smarthome/agent/: __init__.py  __main__.py  chat_service.py  factory.py  mcp_tools.py  rate_limit.py
src/perseus_smarthome/agent/static/: index.html
tests/: conftest.py  test_config.py  test_devices.py  test_find_raspberry.py  test_gpio.py  test_mcp_server.py  test_service.py
tests/agent/: conftest.py  test_chat_service.py  test_factory.py  test_llm_smoke.py  test_mcp_tools.py  test_rate_limit.py
tests/e2e/: conftest.py  test_agent_chat.py  test_agent_negative.py  test_rpi_io_mcp.py
tests/scripts/: test_lib_sh.py
tools/: find_raspberry.py  smoke_meter.py  zigbee-bench-check.sh
