[project]
name = "perseus-smarthome"
version = "0.1.0"
description = "Raspberry Pi smart home MCP control project."
requires-python = ">=3.13"
dependencies = [
  "mcp>=1.0,<2",
  "gpiozero>=2.0",
  # GPIO Zero needs a pin factory at runtime; lgpio is the recommended
  # backend on Raspberry Pi OS Trixie. Marker restricts the install to
  # ARM Linux (Pi 2: armv7l, Pi 4/5: aarch64) because the lgpio sdist
  # links against the `liblgpio` C library, which we only have on the
  # Pi. macOS, Windows, and CI on x86_64 Linux skip it; tests use the
  # mock GPIO adapter from #4.
  "lgpio>=0.2; sys_platform == 'linux' and platform_machine in 'armv6l armv7l aarch64'",
]
# Raspberry Pi 2 (armv7l) provisioning note for issue #7 (deploy):
# Several runtime deps source-build on armv7l because no manylinux*_armv7l
# wheel is published. `cffi 2.x` enters via `mcp -> pyjwt[crypto] ->
# cryptography -> cffi`; `lgpio` is sdist-only and wraps the lgpio C
# library. Run before `uv sync` on the Pi:
#   sudo apt install -y libffi-dev python3-dev build-essential

[project.optional-dependencies]
# LLM agent layer (Milestone 2 / Phase A): deepagents pulls langchain +
# langgraph transitively; langchain-openai resolves init_chat_model with
# model_provider="openai"; websockets provides the WebSocket server for
# the agent chat endpoint.
# Install on dev machines / agent hosts with: uv sync --extra agent
# The Pi's rpi-io-mcp path (uv sync --no-dev) does NOT install these,
# keeping the armv7l install free of tiktoken's Rust build dep.
agent = [
  "deepagents>=0.5.6",
  "langchain-openai>=1.2.1",
  "websockets>=16.0",
]

[project.scripts]
rpi-io-mcp = "perseus_smarthome.server:main"
rpi-io-agent = "perseus_smarthome.agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "websockets>=16.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "e2e: tests that require a reachable Raspberry Pi MCP server",
  "hardware: tests that require Raspberry Pi GPIO wiring",
  "llm: tests that call the real LLM provider (pass --run-llm to opt in)",
]
